# workreps

./: CMakeLists.txt  CMakeLists__old.txt  CMakePresets.json  DCGAN.ipynb  Draw.cpp  Neural_Style_Transfer_.ipynb  New Text Document.txt  README.md  S1996681416302723.htm  SAM.py  Untitled.ipynb  VSIXTorch (1).vsix  YOLOv8 segmentation.ipynb  convert_pc_to_mesh.py  crackers.txt  create_adversial_attack.py  croping_regions.py  ellipsoid_estimation.py  ellipsoid_estimation_2.py  ellipsoid_estimation_GPU.py  ellipsoid_estimation_gpu.py  example.cpp  g3point.py  graph_construction_GPU.py  graph_generator.py  index.txt  kaolin_test.py  libtorchbasics.cpp  main.cpp  main.py  open3d_ml_semantic_segmentation.py  open3d_segmentation_kmean_clustering.py  packages_configs.py  params.ini  pure_pytorch_segformer.ipynb  pytorch_geo_test.py  pytorch_geometric.py  pytorch_lightning_segformer.ipynb  pytorch_lightning_segformer.py  req.txt  (+7 more)
Graval_3D_segmentation/: SAM.py  SAM_ultralytics.py  algorithms.py  calculate_volume_of_segmented_region.py  clustering_and_fitting.py  combine_clusters.py  combine_ideas.py  convert_pc_to_mesh.py  cuml_test.py  ellipsoid_estimation.py  ellipsoid_estimation_2.py  ellipsoid_estimation_GPU.py  graph_construction_GPU.py  graph_generator.py  kaolin_test.py  main.py  open3d_segmentation_kmean_clustering.py  packages_configs.py  packages_versions.py  radii calculations.py  sinwave.py  test.py  test_2.py  tutorial.py
Masked_RCNN/: Configs.py  Dataset.py  Model.py  Train.py
Open3d/: ARGS.txt  CMakeLists.txt  test.ply
Segformer_repo/: Configs.py  DataSet.py  Model_PL.py  Model_Pytorch.py  Training.py  calculate_mean_and_std.py  create_data_set_v2.py  inference.py  main.py  testing.py  utils.py
image_enhancement/: Configs.py  Dataset.py  DecoderGenerator.py  Discriminator.py  GANTraining.py  Generator.py  GeneratorDecoderBlock.py  GeneratorEncoder.py  GeneratorEncoderBlock.py  GradientPenalty.py  ResidualBlock.py  main.py  run.py
mask_RCNN/: Copy_of_torchvision_finetuning_instance_segmentation.ipynb  dataset.py  dataset_v2.py  final_mask_rcnn_notebook.ipynb  main.py  maskedRCNN copy.ipynb  maskedRCNN.ipynb  masked_rcnn.py  meta_data.csv  test.py  training.py  tv-training-code.py
pointNet/: Configs.py  DataSet.py  Feature_Extractor.py  Geometric.py  Model.py  ModelPL.py  TNets.py
segformer/: Configs.py  DataSet.py  Model_PL.py  Model_Pytorch.py  Optimizer_Schedular.py  Training.py  inference.py  (+3 more)
(+69 files in other folders)
